@@ -40,6 +40,8 @@ MPIMISCSRC += $(TEST_PTS_MISC)
 
 MPITESTSRC += $(TEST_PTS_SRC)
 
+# need client interface for all tests
+MODCFLAGS_$(DIR) = -I$(srcdir)/test/client/sysint
 
 #LOCALMPITESTS := $(patsubst %.c,%, $(TEST_PTS_SRC))
 #LOCALMPIOBJS := $(patsubst %.c,%.o, $(TEST_PTS_MISC))
